--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
-                <version>5.3.0</version>
+                <version>5.6.2</version>
                 <executions>
                     <execution>
                         <id>report</id>
@@ -31,7 +31,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>docker-cucumber-reporting</projectName>
+                            <projectName>${env.PROJECT_NAME}</projectName>
                             <outputDirectory>${project.basedir}</outputDirectory>
                             <!-- <inputDirectory>${project.basedir}</inputDirectory> -->
                             <jsonFiles>
