--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
-                <version>5.6.2</version>
+                <version>${env.MAVEN_CUCUMBER_REPORTING_VERSION}</version>
                 <executions>
                     <execution>
                         <id>report</id>
@@ -32,7 +32,7 @@
                         </goals>
                         <configuration>
                             <projectName>${env.PROJECT_NAME}</projectName>
-                            <outputDirectory>${project.basedir}</outputDirectory>
+                            <outputDirectory>${env.OUTPUT_DIRECTORY}</outputDirectory>
                             <!-- <inputDirectory>${project.basedir}</inputDirectory> -->
                             <jsonFiles>
                                 <param>**/*.json</param>
